[package]
name = "unblock"
version = "0.1.0"
authors = ["Joshua Benuck"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
clap = "2.33.0"
itertools = "0.8.2"
gate = "0.6.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sdl2 = "*"

[build-dependencies]
gate_build = "0.6.2"
